src/elements/snapshots/panoramix__elements__element_tuple__tests__empty_tuple-2.snap
---
source: src/elements/element_tuple.rs
expression: tuple_data

---
(
    EmptyElementData,
    (),
)
