src/elements/snapshots/panoramix__elements__element_tuple__tests__label_tuple_widget-2.snap
---
source: src/elements/element_tuple.rs
expression: tuple_state_2

---
RootWidget(
    Column(
        Label(
            "World",
        ),
        Label(
            "World2",
        ),
        Label(
            "World3",
        ),
    ),
)
