src/elements/snapshots/panoramix__elements__element_tuple__tests__label_tuple_widget.snap
---
source: src/elements/element_tuple.rs
expression: tuple_state

---
RootWidget(
    Column(
        Label(
            "Hello",
        ),
        Label(
            "Hello2",
        ),
        Label(
            "Hello3",
        ),
    ),
)
