src/elements/snapshots/panoramix__elements__element_tuple__tests__new_tuple_multi_items-2.snap
---
source: src/elements/element_tuple.rs
expression: tuple_data
---
(
    ElementTupleData(
        LabelData {
            text: "Hello",
            flex: FlexParams {
                flex: 1.0,
                alignment: None,
            },
        },
        LabelData {
            text: "Hello2",
            flex: FlexParams {
                flex: 1.0,
                alignment: None,
            },
        },
        LabelData {
            text: "Hello3",
            flex: FlexParams {
                flex: 1.0,
                alignment: None,
            },
        },
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
    ),
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
