src/elements/snapshots/panoramix__elements__element_tuple__tests__new_tuple_multi_items.snap
---
source: src/elements/element_tuple.rs
expression: tuple
---
ElementTuple_3(
    Label {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
    Label {
        text: "Hello2",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
    Label {
        text: "Hello3",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
    PhantomData,
    PhantomData,
)
