src/elements/snapshots/panoramix__elements__element_tuple__tests__new_tuple_single_item-2.snap
---
source: src/elements/element_tuple.rs
expression: tuple_data

---
(
    ElementTupleData(
        LabelData {
            text: "Hello",
            flex: FlexParams {
                flex: None,
                alignment: None,
            },
        },
        EmptyElementData,
        EmptyElementData,
        EmptyElementData,
        EmptyElementData,
        EmptyElementData,
        EmptyElementData,
        EmptyElementData,
        EmptyElementData,
        EmptyElementData,
        EmptyElementData,
        EmptyElementData,
    ),
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
