src/elements/snapshots/panoramix__elements__element_tuple__tests__new_tuple_single_item.snap
---
source: src/elements/element_tuple.rs
expression: tuple

---
ElementTuple_1(
    Label {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
)
